--- a/resources/assets/sass/app/right.scss
+++ b/resources/assets/sass/app/right.scss
@@ -22,3 +22,231 @@
     color: #a8a8a8;
   }
 }
+
+/*  Head --------------------------------------------- */
+
+.head {
+  background-color: #eee;
+  width: 100%;
+  height: 60px;
+  border-radius: 0 3px 0 0;
+  box-shadow: -1px 0 2px 0 rgba(170, 170, 170, 1);
+  display: flex;
+  h1 i {
+    font-size: 40px;
+    margin: 10px 20px;
+    color: #777777;
+  }
+  .img {
+    width: 50px;
+    height: 50px;
+    min-width: 50px;
+    min-height: 50px;
+    margin: 10px 20px;
+  }
+  .info {
+    width: 100%;
+    margin: 10px;
+    .name {
+      color: #777777;
+      margin-top: 5px;
+      font-size: 0.8em;
+    }
+  }
+}
+
+/*  Profile --------------------------------------------- */
+
+  .profile_box {
+    height: calc(95vh - 60px);
+    width: 100%;
+    background-color: #f7f7f7;
+    .information {
+      width: 100%;
+      height: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+    .widget {
+      position: relative;
+      width: 70%;
+      height: 100%;
+    }
+    .widget_100 {
+      width: 100%;
+    }
+    .cover {
+      height: 300px;
+      width: 100%;
+      position: relative;
+      img {
+        width: 100%;
+        height: 100%;
+      }
+    }
+    .photo {
+      position: absolute;
+      top: 225px;
+      left: 50%;
+      width: 100px;
+      height: 100px;
+      margin: 0 0 0 -55px;
+      border: 5px solid white;
+    }
+    h1 {
+      margin: 50px 0;
+      text-align: center;
+      font-weight: 200;
+      color: #999;
+    }
+    h2 {
+      text-align: center;
+      font-size: 16px;
+      font-weight: 300;
+      color: #999;
+    }
+    .users {
+      position: relative;
+      background-color: #ffffff;
+      width: 30%;
+      height: 100%;
+      min-height: 100%;
+      overflow-y: auto;
+    }
+    .list {
+      width: 100%;
+      height: 90px;
+      background-color: #ffffff;
+      box-shadow: 1px 1px 2px #777777;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      .image {
+        margin: 0 5%;
+      }
+      .name {
+        background-color: #fafafa;
+        width: 70%;
+        height: 50%;
+        outline: 0;
+        border: 0;
+        color: #777777;
+        font-size: 14px;
+        border-radius: 25px 0 0 25px;
+        cursor: pointer;
+        &:hover {
+          background-color: #EEEEEE;
+          color: #009688;
+        }
+      }
+      .current_user {
+        background-color: #EEEEEE;
+        color: #009688;
+        font-weight: bold;
+      }
+      .random {
+        background-color: transparent;
+        width: 100%;
+        height: 100%;
+        outline: 0;
+        border: 0;
+        color: #494949;
+        cursor: pointer;
+        &:hover {
+          color: #009688;
+        }
+      }
+    }
+  }
+
+/* Edit User --------------------------------------------------------------------- */
+
+.edit_user {
+  background-color: #fafafa;
+  width: 100%;
+  min-height: 100%;
+  form {
+    padding: 20px;
+  }
+  h1 {
+    color: #009688;
+    font-size: 14px;
+    font-weight: bold;
+    margin: 30px 0;
+  }
+  .info {
+    width: 100%;
+    margin: auto;
+    height: 60px;
+    border: 0;
+    text-align: center;
+    background-color: transparent;
+    border-bottom: 2px solid #EEEEEE;
+    outline: none;
+    transition: all .3s ease-out;
+    &:hover {
+      border-bottom: 2px solid #009688;
+    }
+  }
+  .upload_profile {
+    position: relative;
+    [type=file] {
+      cursor: pointer;
+      display: block;
+      filter: alpha(opacity = 0);
+      min-height: 100%;
+      min-width: 100%;
+      opacity: 0;
+      position: absolute;
+      right: 0;
+      text-align: right;
+      top: 0;
+    }
+    .area {
+      width: 100%;
+      line-height: 40px;
+      border: 0;
+      outline: 0;
+      color: #777777;
+      cursor: pointer;
+      text-align: center;
+      &:hover {
+        color: #009688;
+      }
+    }
+  }
+  .save {
+    line-height: 30px;
+    width: 100%;
+    background-color: transparent;
+    border: solid 2px #EEEEEE;
+    color: #777777;
+    margin-top: 25px;
+    outline: 0;
+    cursor: pointer;
+    transition: all .3s ease-out;
+    &:hover {
+      border: solid 2px #EEEEEE;
+      font-weight: bold;
+    }
+  }
+}
+
+
+/* Vue effects ---------------------------------------------------------------------- */
+
+.slide-fade-enter-active {
+  transition: all .5s ease;
+}
+.slide-fade-enter, .slide-fade-leave-to {
+  transform: translateX(5px);
+  opacity: 0;
+}
+
+.fade-enter-active, .fade-leave-active {
+  transition: opacity .1s;
+}
+.fade-enter, .fade-leave-to {
+  opacity: 0;
+}
