--- a/public/css/app.css
+++ b/public/css/app.css
@@ -988,6 +988,281 @@ body {
   color: #FF9800;
 }
 
+/* Groups ---------------------------------------------------------------------- */
+
+.groups_box {
+  height: calc(95vh - 60px);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: relative;
+}
+
+.groups_box .content {
+  width: 100%;
+  height: 100%;
+  background-color: #f8f8f8;
+  overflow-y: auto;
+}
+
+.groups_box .groups {
+  width: 100%;
+  height: 100%;
+  background: #f1f1f1;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.groups_box .group {
+  width: 50%;
+  height: 100%;
+}
+
+.groups_box .group a {
+  width: 100%;
+  height: 100%;
+  color: #777777;
+  font-size: 0.9em;
+  font-weight: bold;
+  text-decoration: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.groups_box .group a:hover {
+  color: #009688;
+  background-color: #f3f3f3;
+}
+
+/* Table ---------------------------------------------------------------------- */
+
+.chat_groups {
+  background: #f8f8f8;
+  height: calc(100% - 30px);
+  padding: 15px 40px;
+  overflow-y: hidden;
+}
+
+.chat_groups h4 {
+  margin: 25px 0;
+  color: #777777;
+}
+
+.chat_groups hr {
+  border: 0;
+  height: 3px;
+  margin: 20px 0;
+  background: #EEEEEE;
+}
+
+.chat_groups .add {
+  background-color: #FFFFFF;
+  border-radius: 50%;
+  margin-left: 5px;
+}
+
+.chat_groups .add:hover {
+  color: #009688;
+}
+
+.chat_groups .data a {
+  text-decoration: none;
+  color: #777777;
+}
+
+.chat_groups table {
+  width: 100%;
+  border-collapse: collapse;
+  margin: auto;
+  -webkit-box-shadow: 0 0 2px 0 rgba(119, 119, 119, 0.5);
+          box-shadow: 0 0 2px 0 rgba(119, 119, 119, 0.5);
+  -webkit-transition: all 2s ease-out;
+  transition: all 2s ease-out;
+  background: #fbfbfb;
+}
+
+.chat_groups tr:nth-of-type(odd) {
+  background: #FFFFFF;
+}
+
+.chat_groups th {
+  background: #fbfbfb;
+  color: #777777;
+  font-size: 0.8em;
+  text-align: center;
+  padding: 15px 0;
+  border-bottom: 1px solid #ccc;
+}
+
+.chat_groups td {
+  padding: 10px;
+  border-bottom: 1px solid #ccc;
+  text-align: center;
+  color: #777777;
+  font-size: 0.9em;
+  font-weight: inherit;
+}
+
+.chat_groups .avatar {
+  margin: auto;
+  max-height: 40px;
+  max-width: 40px;
+}
+
+.chat_groups .green {
+  color: #009688;
+}
+
+.chat_groups .red {
+  color: #E57373;
+}
+
+.chat_groups .orange {
+  color: #FF9800;
+}
+
+.chat_groups .format {
+  border: none;
+  background-color: transparent;
+  outline: none;
+  cursor: pointer;
+}
+
+.chat_groups .link_add {
+  text-decoration: none;
+  margin-left: 5px;
+}
+
+.chat_groups .pagination {
+  display: block;
+  margin-top: 1em;
+  color: white;
+  text-align: right;
+}
+
+.chat_groups .pagination .numbers li {
+  display: inline-block;
+}
+
+.chat_groups .pagination .numbers li .disable {
+  pointer-events: none;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  border-radius: 2px;
+  color: #aaaaaa;
+  border: 1px solid #f5f5f5;
+}
+
+.chat_groups .pagination .numbers li a,
+.chat_groups .pagination .numbers li span {
+  color: #777777;
+  background: white;
+  border: 1px solid #cccccc;
+  padding: 5px;
+  display: block;
+  text-align: center;
+  border-radius: 5px;
+  margin: 2px;
+  -webkit-box-shadow: 0 0 1px 0 rgba(119, 119, 119, 0.5);
+          box-shadow: 0 0 1px 0 rgba(119, 119, 119, 0.5);
+}
+
+.chat_groups .pagination .numbers li a.current,
+.chat_groups .pagination .numbers li span.current {
+  background: #fafafa;
+  color: #009688;
+}
+
+.chat_groups .pagination .numbers li a {
+  text-decoration: none;
+  -webkit-transition: all .3s ease-out;
+  transition: all .3s ease-out;
+  cursor: pointer;
+}
+
+.chat_groups .pagination .numbers li a:hover {
+  background: #f1f1f1;
+  color: #009688;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+}
+
+.chat_groups .group_input {
+  height: 40px;
+  margin: 20px 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.chat_groups .group_input .upload_avatar {
+  position: relative;
+}
+
+.chat_groups .group_input .upload_avatar [type=file] {
+  cursor: pointer;
+  display: block;
+  filter: alpha(opacity=0);
+  min-height: 100%;
+  min-width: 100%;
+  opacity: 0;
+  position: absolute;
+  right: 0;
+  text-align: right;
+  top: 0;
+}
+
+.chat_groups .group_input .upload_avatar i {
+  color: #777777;
+}
+
+.chat_groups .group_input .input_name {
+  width: 100%;
+  border: 1px solid #e8e8e8;
+  outline: 0;
+  padding-left: 10px;
+}
+
+.chat_groups .group_input .button_upload {
+  height: 100%;
+  width: 50px;
+  background-color: #f1f1f1;
+  border: 0;
+  outline: 0;
+  cursor: pointer;
+}
+
+.chat_groups .group_input .button_upload:hover {
+  background-color: #EEEEEE;
+}
+
+.chat_groups .group_input .button_send {
+  width: 100px;
+  border: 0;
+  outline: 0;
+  background-color: #f1f1f1;
+  cursor: pointer;
+  font-weight: bold;
+  color: #009688;
+}
+
+.chat_groups .group_input .button_send:hover {
+  background-color: #EEEEEE;
+}
+
+.chat_groups .group_input button:disabled,
+.chat_groups .group_input button[disabled] {
+  display: none;
+}
+
 /* Vue effects ---------------------------------------------------------------------- */
 
 .slide-fade-enter-active {
@@ -1090,6 +1365,79 @@ body {
   -webkit-box-shadow: 0 0 1px #fff;
           box-shadow: 0 0 1px #fff;
   line-height: 23px;
+}
+
+/* Search --------------------------------------------- */
+
+.search_container {
+  width: 100%;
+  height: 55px;
+  background: #fbfbfb;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.search_container .search {
+  width: 90%;
+  height: 30px;
+  margin: auto;
+  border: 1px solid #f1f1f1;
+  border-radius: 5px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.search_container .search i {
+  color: #aaaaaa;
+  margin: 4px 5px 0 5px;
+}
+
+.search_container .search input {
+  width: 100%;
+  border: none;
+  border-radius: 5px;
+  padding-left: 10px;
+}
+
+.search_container .search input:focus {
+  outline: none;
+}
+
+/* Filter --------------------------------------------- */
+
+.filter {
+  width: 100%;
+  height: 40px;
+  background: #f1f1f1;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+.filter button {
+  width: 30%;
+  height: 100%;
+  color: #777777;
+  border: none;
+  background-color: transparent;
+  outline: none;
+  cursor: pointer;
+}
+
+.filter button:hover {
+  -webkit-box-shadow: 0px -1px 0px 0px #bababa;
+          box-shadow: 0px -1px 0px 0px #bababa;
+}
+
+.filter .active {
+  font-weight: bold;
+  color: #009688;
+  -webkit-box-shadow: 0px -1px 0px 0px #bababa;
+          box-shadow: 0px -1px 0px 0px #bababa;
 }
 
 body::-webkit-scrollbar,
