--- a/resources/assets/sass/app/left.scss
+++ b/resources/assets/sass/app/left.scss
@@ -62,3 +62,60 @@
     }
   }
 }
+
+/* Search --------------------------------------------- */
+
+.search_container {
+  width: 100%;
+  height: 55px;
+  background: #fbfbfb;
+  display: flex;
+  .search {
+    width: 90%;
+    height: 30px;
+    margin: auto;
+    border: 1px solid #f1f1f1;
+    border-radius: 5px;
+    display: flex;
+    i {
+      color: #aaaaaa;
+      margin: 4px 5px 0 5px;
+    }
+    input {
+      width: 100%;
+      border: none;
+      border-radius: 5px;
+      padding-left: 10px;
+      &:focus {
+        outline: none;
+      }
+    }
+  }
+}
+
+/* Filter --------------------------------------------- */
+
+.filter {
+  width: 100%;
+  height: 40px;
+  background: #f1f1f1;
+  display: flex;
+  justify-content: space-around;
+  button {
+    width: 30%;
+    height: 100%;
+    color: #777777;
+    border: none;
+    background-color: transparent;
+    outline: none;
+    cursor: pointer;
+    &:hover {
+      box-shadow: 0px -1px 0px 0px rgba(186, 186, 186, 1);
+    }
+  }
+  .active {
+    font-weight: bold;
+    color: #009688;
+    box-shadow: 0px -1px 0px 0px rgba(186, 186, 186, 1);
+  }
+}
