--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -8,3 +8,4 @@
 @import "app/scrollbar";
 @import "app/queries";
 @import "~vue-snotify/styles/simple.css";
+@import "~vue-multiselect/dist/vue-multiselect.min.css";
