--- a/resources/assets/sass/app/left.scss
+++ b/resources/assets/sass/app/left.scss
@@ -119,3 +119,104 @@
     box-shadow: 0px -1px 0px 0px rgba(186, 186, 186, 1);
   }
 }
+
+/* Contacts --------------------------------------------- */
+
+.contact_list {
+  width: 100%;
+  background-color: #ffffff;
+  height: calc(95vh - 155);
+  border-radius: 0 0 0 3px;
+  overflow-y: auto;
+}
+
+
+.contact {
+  height: 70px;
+  background-color: #ffffff;
+  display: flex;
+  &:hover {
+    background-color: #f5f5f5;
+  }
+  .preview {
+    width: 100%;
+    height: 70px;
+    border-bottom: 1px solid #eeeeee;
+    overflow: hidden;
+  }
+  a {
+    text-decoration: none;
+    color: #2a2a2a;
+  }
+  .text {
+    margin-top: 20px;
+  }
+  h5 {
+    font-size: 16px;
+    font-weight: inherit;
+  }
+  h6 {
+    font-weight: inherit;
+    font-size: 14px;
+    margin-top: 5px;
+  }
+  .avatar {
+    margin: 12px 20px;
+  }
+  .photo {
+    margin-right: 5px;
+    color: #eeeeee;
+    font-size: 15px;
+  }
+  .time {
+    margin: 30px 10px;
+    p {
+      color: #74787E;
+      font-size: 12px;
+    }
+    i {
+      color: #009688;
+      font-size: 25px;
+    }
+  }
+  .middle {
+    margin: 30px auto;
+    color: #aaaaaa;
+  }
+  .active_chat {
+    color: #009688;
+    padding-left: 15px;
+  }
+  .active_message {
+    padding-left: 15px;
+    color: #444444;
+  }
+  .active_image {
+    box-shadow: 6px 0px 16px -13px rgba(119, 119, 119, 1);
+  }
+}
+
+/* Notifications */
+
+.notifications {
+  .mark {
+    line-height: 40px;
+    width: 100%;
+    background-color: #fbfbfb;
+    border: solid 1px #EEEEEE;
+    color: #777777;
+    -webkit-transition: all .3s ease-out;
+    transition: all .3s ease-out;
+    outline: 0;
+    &:hover {
+      font-weight: bold;
+      background-color: #fbfbfb;
+    }
+  }
+  .new_notification {
+    background-color: #FBFCFC;
+  }
+  .green_teal {
+    color: #009688;
+  }
+}
