--- a/resources/assets/sass/app/right.scss
+++ b/resources/assets/sass/app/right.scss
@@ -505,6 +505,315 @@
 
 }
 
+/* Header ---------------------------------------------------------------------- */
+
+.head {
+  background-color: #eeeeee;
+  width: 100%;
+  height: 60px;
+  border-left: 0px solid #aaaaaa;
+  box-shadow: -1px 0px 2px 0px rgba(170, 170, 170, 1);
+  border-radius: 0 3px 0 0;
+  display: flex;
+  h1 i {
+    border-radius: 50%;
+    font-size: 40px;
+    margin: 10px 20px;
+    color: #777777;
+  }
+  .img {
+    width: 50px;
+    height: 50px;
+    min-width: 50px;
+    min-height: 50px;
+    margin: 5px 20px;
+    border-radius: 50%;
+  }
+  .icon {
+    margin: 10px 20px;
+    border-radius: 50%;
+    font-size: 40px;
+    color: #777777;
+  }
+  .info {
+    width: 100%;
+    margin: 10px;
+  }
+  .online {
+    color: #777777;
+    font-size: 0.8em;
+    font-weight: inherit;
+    .state {
+      margin: 0 7px;
+      font-weight: bold;
+      font-size: 20px;
+    }
+    .green {
+      color: #009688;
+    }
+    .red {
+      color: #E57373;
+    }
+  }
+
+}
+
+/* Chat ---------------------------------------------------------------------- */
+
+.chat_box {
+  height: calc(95vh - 120px);
+  display: flex;
+  position: relative;
+  .chat_content {
+    width: 100%;
+    background-color: #ECE5DD;
+    padding: 10px 100px;
+    overflow-y: auto;
+  }
+}
+
+/* Modal ---------------------------------------------------------------------- */
+
+.modal {
+  background-color: rgba(225, 225, 225, 0.8);
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: 10;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  .container {
+    background-color: #fbfbfb;
+    border: 0px solid #ffffff;
+    width: 70%;
+    height: 80%;
+    border-radius: 2px;
+    box-shadow: 0 2px 4px #7E7E7E;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .preview {
+    width: 100%;
+    height: 100%;
+    display: flex;
+  }
+  img {
+    width: 100%;
+    height: 100%;
+    min-width: 100%;
+    min-height: 100%;
+  }
+  a {
+    background-color: #FFFFFF;
+    height: 30px;
+    width: 30px;
+    text-decoration: none;
+    cursor: pointer;
+  }
+  i {
+    color: #009688;
+    font-size: 30px;
+    &:hover {
+      color: #E57373;
+    }
+  }
+}
+
+/* Upload photo ---------------------------------------------------------------------- */
+
+.upload_photo {
+  overflow: hidden;
+  position: relative;
+  [type=file] {
+    cursor: pointer;
+    display: block;
+    filter: alpha(opacity = 0);
+    min-height: 100%;
+    min-width: 100%;
+    opacity: 0;
+    position: absolute;
+    right: 0;
+    text-align: right;
+    top: 0;
+  }
+  i {
+    color: #f1f1f1;
+    font-size: 100px;
+  }
+}
+
+/* Send Message ---------------------------------------------------------------------- */
+
+.send {
+  width: 100%;
+  height: 60px;
+  background: #f1f1f1;
+  display: flex;
+  .message {
+    width: 100%;
+    height: 45px;
+    background: #ffffff;
+    margin: auto;
+    border-radius: 5px;
+    display: flex;
+  }
+  button {
+    border: none;
+    background-color: transparent;
+    outline: none;
+    cursor: pointer;
+  }
+  input {
+    width: 100%;
+    margin: 0 10px;
+    border: none;
+    &:focus {
+      outline: none;
+    }
+  }
+  i {
+    color: #aaaaaa;
+    width: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+  }
+  .green {
+    color: #009688;
+  }
+}
+
+/* Bubble ---------------------------------------------------------------------- */
+
+.bubble {
+  .line {
+    border-radius: 7px;
+    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.05);
+    padding: 5px 7px;
+    max-width: 350px;
+    height: auto;
+    position: relative;
+  }
+  .friend {
+    background: #ffffff;
+    margin: 0 0 10px 0;
+  }
+  .friend_mouth {
+    width: 0;
+    height: 0;
+    border-bottom: 10px solid white;
+    border-left: 10px solid transparent;
+    position: absolute;
+    bottom: 10px;
+    left: -10px;
+  }
+  .friend_img {
+    width: 50px;
+    height: 50px;
+    margin: 5px 20px;
+    border-radius: 50%;
+    position: absolute;
+    bottom: -30px;
+    left: -95px;
+  }
+  .user {
+    background: #dcf8c6;
+    margin: 0 0 10px auto;
+  }
+  .user_mouth {
+    width: 0;
+    height: 0;
+    border-bottom: 10px solid #dcf8c6;
+    border-right: 10px solid transparent;
+    position: absolute;
+    bottom: 10px;
+    left: 100%;
+  }
+  .user_img {
+    width: 50px;
+    height: 50px;
+    margin: 5px 20px;
+    border-radius: 50%;
+    position: absolute;
+    bottom: -30px;
+    left: 10px;
+  }
+  .content {
+    margin: 10px;
+    max-width: 100%;
+    height: auto;
+    font-size: 0.9em;
+    p {
+      max-width: 350px;
+      margin-bottom: 15px;
+      overflow: hidden;
+    }
+    img {
+      width: 100%;
+      max-height: 350px;
+      margin-bottom: 10px;
+      border-radius: 5px;
+    }
+  }
+  .time {
+    color: rgba(0, 0, 0, 0.4);
+    font-size: 0.6em;
+    text-align: right;
+    margin-top: -10px;
+  }
+  .error {
+    color: #E57373;
+  }
+  .typing {
+    border-radius: 7px;
+    padding: 5px 7px;
+    width: 50px;
+    max-width: 50px;
+    position: relative;
+    background-color: transparent;
+  }
+  .typing_mouth {
+    width: 0;
+    height: 0;
+    border-bottom: 10px solid transparent;
+    border-left: 10px solid transparent;
+    position: absolute;
+    bottom: 10px;
+    left: -10px;
+  }
+  .typing_content {
+    margin-top: 20px;
+    font-size: 0.9em;
+  }
+  .dot {
+    display: inline-block;
+    width: 8px;
+    height: 8px;
+    border-radius: 50%;
+    margin-right: 3px;
+    background: #ffffff;
+    animation: wave 1.3s linear infinite;
+  }
+  .dot:nth-child(2) {
+    animation-delay: -1.1s;
+  }
+  .dot:nth-child(3) {
+    animation-delay: -0.9s;
+  }
+
+  @keyframes wave {
+    0%, 60%, 100% {
+      transform: initial;
+    }
+    30% {
+      transform: translateY(-15px);
+    }
+  }
+}
+
 /* Vue effects ---------------------------------------------------------------------- */
 
 .slide-fade-enter-active {
